--- a/css.template
+++ b/css.template
@@ -1,18 +1,18 @@
 @font-face {
   font-family: "<%=fontName%>";
   src: url("<%=eot%>"); /* IE9 */
-  src: url('<%=eot%>#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('data:application/x-font-woff2;charset=utf-8;base64,<%=woff2%>') format('woff2'),
-  url('<%=woff%>') format('woff'),
-  url('<%=ttf%>') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
-  url('<%=svg%>#iconfont') format('svg'); /* iOS 4.1- */
+  src: url("<%=eot%>#iefix") format("embedded-opentype"), /* IE6-IE8 */
+  url("data:application/x-font-woff2;charset=utf-8;base64,<%=woff2%>") format("woff2"),
+  url("<%=woff%>") format("woff"),
+  url("<%=ttf%>") format("truetype"), /* chrome, firefox, opera, Safari, Android, iOS 4.2+ */
+  url("<%=svg%>#iconfont") format("svg"); /* iOS 4.1- */
 }
 
-.<%=baseSelector%> {
+.<%=baseClass%> {
   line-height: 1;
 }
 
-.<%=baseSelector%>:before {
+.<%=baseClass%>:<%=pseudo%> {
   font-family: <%=fontName%> !important;
   font-size: 16px;
   font-style: normal;
@@ -21,7 +21,7 @@
 }
 
 <% _.forIn(codePoints, function(value, key){ %>
-.<%=iconPrefix%>-<%=key%>:before {
+.<%=iconClassPrefix%>-<%=key%>:<%=pseudo%> {
   content: "\<%-value%>";
 }
 <%});%>
