--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@zhansingsong/svg2font",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "convertor svg to icon font",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "svg2font": "./bin/index.js"
+  },
   "author": "zhansingsong",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.0",
+    "commander": "^5.1.0",
     "font-carrier": "^0.2.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
