--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@zhansingsong/svg2font",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "convertor svg to icon font",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "svg2font": "./bin/index.js"
+    "svg2font": "./bin/svg2font.js"
   },
   "author": "zhansingsong",
   "license": "ISC",
